--- a/src/default/partials/member.sources.hbs
+++ b/src/default/partials/member.sources.hbs
@@ -13,7 +13,7 @@
             {{#each sources}}
                 {{#if url}}
                     <li>Defined in <a href="{{url}}">{{fileName}}:{{line}}</a></li>
-                {{else}}
+                {{else if 0}}
                     <li>Defined in {{fileName}}:{{line}}</li>
                 {{/if}}
             {{/each}}
