--- a/src/default/partials/members.hbs
+++ b/src/default/partials/members.hbs
@@ -1,5 +1,5 @@
-{{#each groups}}
+{{#eachWithPublic groups}}
     {{#unless allChildrenHaveOwnDocument}}
         {{> members.group}}
     {{/unless}}
-{{/each}}
+{{/eachWithPublic}}
