--- a/src/default/assets/css/elements/_filter.sass
+++ b/src/default/assets/css/elements/_filter.sass
@@ -3,18 +3,18 @@
 .toggle-protected .tsd-is-private
     display: none
 
-.toggle-public .tsd-is-private,
-.toggle-public .tsd-is-protected,
-.toggle-public .tsd-is-private-protected
+.tsd-is-private,
+.tsd-is-protected,
+.tsd-is-private-protected
     display: none
 
 .toggle-inherited .tsd-is-inherited
     display: none
 
-.toggle-only-exported .tsd-is-not-exported
+.tsd-is-not-exported
     display: none
 
-.toggle-externals .tsd-is-external
+.tsd-is-external
     display: none
 
 
