--- a/src/default/partials/navigation.hbs
+++ b/src/default/partials/navigation.hbs
@@ -5,9 +5,9 @@
         </li>
     {{else}}
         {{#if isGlobals}}
-            <li class="globals {{#if isInPath}}current{{/if}} {{cssClasses}}">
+            <!--<li class="globals {{#if isInPath}}current{{/if}} {{cssClasses}}">
                 <a href="{{relativeURL url}}"><em>{{{wbr title}}}</em></a>
-            </li>
+            </li>-->
         {{else}}
             <li class="{{#if isInPath}}current{{/if}} {{cssClasses}}">
                 <a href="{{relativeURL url}}">{{{wbr title}}}</a>
